# jinja.cpp

./: CMakeLists.txt  README.md  README_CN.md  jinja.hpp
.github/workflows/: build.yml
doc/: implementation_details.md  implementation_details_CN.md
tests/: generate_assets.py  test_chat_template.json  test_main.cpp
